@@ -1,0 +1,188 @@
+<!-- $Id: mod_sql_passwd.html,v 1.1 2009-09-09 18:47:33 castaglia Exp $ -->
+<!-- $Source: /home/proftpd-core/backup/proftp-cvsroot/proftpd/doc/contrib/mod_sql_passwd.html,v $ -->
+
+<html>
+<head>
+<title>ProFTPD module mod_sql_passwd</title>
+</head>
+
+<body bgcolor=white>
+
+<hr>
+<center>
+<h2><b>ProFTPD module <code>mod_sql_passwd</code></b></h2>
+</center>
+<hr><br>
+
+<p>
+Many FTP sites use SQL databases for storing user accounts, including the
+user name and password.  And while the <code>mod_sql</code> module provides
+support for some formats for the passwords stored in SQL databases, many
+sites have other formats which are <i>not</i> supported by <code>mod_sql</code>.
+These other formats often include MD5 or SHA1 passwords, base64-encoded
+or hex-encoded, <i>without</i> the prefix which is required by
+<code>mod_sql</code>'s "OpenSSL" <code>SQLAuthType</code>.
+
+<p>
+The <code>mod_sql_passwd</code> module provides support for some of these
+other formats.
+
+<p>
+This module is contained in the <code>mod_sql_passwd.c</code> file for
+ProFTPD 1.3.<i>x</i>, and is not compiled by default.  Installation
+instructions are discussed <a href="#Installation">here</a>; a discussion
+on <a href="#Usage">usage</a> is also available.
+
+<p>
+This product includes software developed by the OpenSSL Project for use in the
+OpenSSL Toolkit (http://www.openssl.org/).
+
+<p>
+This product includes cryptographic software written by Eric Young
+(eay@cryptsoft.com).
+
+<p>
+The most current version of <code>mod_sql_passwd</code> is distributed with
+ProFTPD.
+
+<h2>Author</h2>
+<p>
+Please contact TJ Saunders &lt;tj <i>at</i> castaglia.org&gt; with any
+questions, concerns, or suggestions regarding this module.
+
+<h2>Directives</h2>
+<ul>
+  <li><a href="#SQLPasswordEncoding">SQLPasswordEncoding</a>
+  <li><a href="#SQLPasswordEngine">SQLPasswordEngine</a>
+</ul>
+
+<hr>
+<h2><a name="SQLPasswordEncoding">SQLPasswordEncoding</a></h2>
+<strong>Syntax:</strong> SQLPasswordEncoding <em>encoding</em><br>
+<strong>Default:</strong> <em>hex</em><br>
+<strong>Context:</strong> &quot;server config&quot;, <code>&lt;VirtualHost&gt;</code>, <code>&lt;Global&gt;</code><em></em><br>
+<strong>Module:</strong> mod_sql_passwd<br>
+<strong>Compatibility:</strong> 1.3.3rc2 and later
+
+<p>
+The <code>SQLPasswordEncoding</code> directive configures the encoding that
+<code>mod_sql_passwd</code> expects when handling password values retrieved
+from a SQL database.
+
+<p>
+The following <em>encoding</em> values are currently supported:
+<ul>
+  <li>base64
+  <li>hex (<i>for lowercase hex values</i>)
+  <li>HEX (<i>for uppercase hex values</i>)
+</ul>
+
+<p>
+If no <code>SQLPasswordEncoding</code> directive is configured,
+<code>mod_sql_passwd</code> will use "hex" by default.
+
+<hr>
+<h2><a name="SQLPasswordEngine">SQLPasswordEngine</a></h2>
+<strong>Syntax:</strong> SQLPasswordEngine <em>on|off</em><br>
+<strong>Default:</strong> <em>off</em><br>
+<strong>Context:</strong> &quot;server config&quot;, <code>&lt;VirtualHost&gt;</code>, <code>&lt;Global&gt;</code>
+<strong>Module:</strong> mod_sql_passwd<br>
+<strong>Compatibility:</strong> 1.3.3rc2 and later
+
+<p>
+The <code>SQLPasswordEngine</code> directive enables or disables the module's
+registered <code>SQLAuthType</code> handlers.
+
+<hr>
+<h2><a name="Installation">Installation</a></h2>
+The <code>mod_sql_passwd</code> module is distributed with ProFTPD.  Simply
+follow the normal steps for using third-party modules in proftpd.  The
+<code>mod_sql_passwd</code> module requires OpenSSL support, so you <b>must</b>
+use the <code>--enable-openssl</code> configuration option.
+<b>NOTE</b>: it is <b>important</b> that <code>mod_sql_passwd</code> appear
+<i>after</i> <code>mod_sql</code> in your <code>--with-modules</code> configure
+option:
+<pre>
+  ./configure --enable-openssl --with-modules=mod_sql:mod_sql_passwd ...
+</pre>
+To build <code>mod_sql_passwd</code> as a DSO module:
+<pre>
+  ./configure --enable-dso --enable-openssl --with-shared=mod_sql_passwd
+</pre>
+Then follow the usual steps:
+<pre>
+  make
+  make install
+</pre>
+
+<p>
+For those with an existing ProFTPD installation, you can use the
+<code>prxs</code> tool to add <code>mod_sql_passwd</code>, as a DSO module, to
+your existing server:
+<pre>
+  # prxs -c -i -d mod_sql_passwd.c
+</pre>
+
+<hr>
+<h2><a name="Usage">Usage</a></h2>
+
+<p>
+The following examples demonstrate how the <code>mod_sql_passwd</code> can
+be used.
+
+<p>
+To configure <code>mod_sql_passwd</code> to handle MD5 passwords that are
+base64-encoded, use:
+<pre>
+  &lt;IfModule mod_sql_passwd.c&gt;
+    SQLPasswordEngine on
+    SQLPasswordEncoding base64
+  &lt;/IfModule&gt;
+
+  &lt;IfModule mod_sql.c&gt;
+    ...
+
+    # Now that mod_sql_passwd is used, we can configure "md5" as an
+    # SQLAuthType that mod_sql will handle.
+    SQLAuthTypes md5
+  &lt;/IfModule&gt;
+</pre>
+
+<p>
+To have <code>mod_sql_passwd</code> to handle hex-encoded (<i>and</i> in
+lowercase) passwords, use:
+<pre>
+  &lt;IfModule mod_sql_passwd.c&gt;
+    SQLPasswordEngine on
+    SQLPasswordEncoding hex
+  &lt;/IfModule&gt;
+</pre>
+
+<p>
+And if for some reason your database values are stored as hex values in
+uppercase, you would use:
+<pre>
+  &lt;IfModule mod_sql_passwd.c&gt;
+    SQLPasswordEngine on
+    SQLPasswordEncoding HEX
+  &lt;/IfModule&gt;
+</pre>
+
+<p>
+<hr><br>
+
+Author: <i>$Author: castaglia $</i><br>
+Last Updated: <i>$Date: 2009-09-09 18:47:33 $</i><br>
+
+<br><hr>
+
+<font size=2><b><i>
+&copy; Copyright 2009 TJ Saunders<br>
+ All Rights Reserved<br>
+</i></b></font>
+
+<hr><br>
+
+</body>
+</html>
+
